[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Scenes/Maps/Slot.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Scripts/Inventory.gd" type="Script" id=2]
[ext_resource path="res://src/Assets/Inventory/Equals.png" type="Texture" id=5]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.0235294, 0.2, 0.4, 1 )
colors = PoolColorArray( 0.196078, 0.117647, 0.0705882, 1, 0.253906, 0.142011, 0.0714111, 1, 0.221922, 0.134312, 0.0762854, 1, 0.199219, 0.10091, 0.0357971, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[node name="Inventory" type="Node2D"]
script = ExtResource( 2 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 1024.0
margin_bottom = 597.0
texture = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -487.0
margin_top = -271.5
margin_right = 494.0
margin_bottom = 282.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer"]
margin_right = 981.0
margin_bottom = 554.0

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_right = 981.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 981.0
margin_bottom = 50.0
size_flags_horizontal = 3
color = Color( 0.0901961, 0.0862745, 0.0862745, 1 )

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -113.0
margin_top = -7.0
margin_right = 113.0
margin_bottom = 7.0
size_flags_horizontal = 3
text = "Inventory"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 981.0
margin_bottom = 554.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 488.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0901961, 0.0862745, 0.0862745, 1 )

[node name="InventoryContainer" type="GridContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.33179
margin_top = 8.2182
margin_right = -8.66821
margin_bottom = -15.7818
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 10
custom_constants/hseparation = 8
columns = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]

[node name="Slot2" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_left = 80.0
margin_right = 152.0

[node name="Slot3" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_left = 160.0
margin_right = 232.0

[node name="Slot4" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_left = 240.0
margin_right = 312.0

[node name="Slot5" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_left = 320.0
margin_right = 392.0

[node name="Slot6" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_left = 400.0
margin_right = 472.0

[node name="Slot7" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_top = 82.0
margin_bottom = 154.0

[node name="Slot8" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_left = 80.0
margin_top = 82.0
margin_right = 152.0
margin_bottom = 154.0

[node name="Slot9" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_left = 160.0
margin_top = 82.0
margin_right = 232.0
margin_bottom = 154.0

[node name="Slot10" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_left = 240.0
margin_top = 82.0
margin_right = 312.0
margin_bottom = 154.0

[node name="Slot11" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_left = 320.0
margin_top = 82.0
margin_right = 392.0
margin_bottom = 154.0

[node name="Slot12" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_left = 400.0
margin_top = 82.0
margin_right = 472.0
margin_bottom = 154.0

[node name="Slot13" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_top = 164.0
margin_bottom = 236.0

[node name="Slot14" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_left = 80.0
margin_top = 164.0
margin_right = 152.0
margin_bottom = 236.0

[node name="Slot15" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_left = 160.0
margin_top = 164.0
margin_right = 232.0
margin_bottom = 236.0

[node name="Slot16" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_left = 240.0
margin_top = 164.0
margin_right = 312.0
margin_bottom = 236.0

[node name="Slot17" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_left = 320.0
margin_top = 164.0
margin_right = 392.0
margin_bottom = 236.0

[node name="Slot18" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_left = 400.0
margin_top = 164.0
margin_right = 472.0
margin_bottom = 236.0

[node name="Slot19" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_top = 246.0
margin_bottom = 318.0

[node name="Slot20" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_left = 80.0
margin_top = 246.0
margin_right = 152.0
margin_bottom = 318.0

[node name="Slot21" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_left = 160.0
margin_top = 246.0
margin_right = 232.0
margin_bottom = 318.0

[node name="Slot22" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_left = 240.0
margin_top = 246.0
margin_right = 312.0
margin_bottom = 318.0

[node name="Slot23" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_left = 320.0
margin_top = 246.0
margin_right = 392.0
margin_bottom = 318.0

[node name="Slot24" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_left = 400.0
margin_top = 246.0
margin_right = 472.0
margin_bottom = 318.0

[node name="Slot25" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_top = 328.0
margin_bottom = 400.0

[node name="Slot26" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_left = 80.0
margin_top = 328.0
margin_right = 152.0
margin_bottom = 400.0

[node name="Slot27" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_left = 160.0
margin_top = 328.0
margin_right = 232.0
margin_bottom = 400.0

[node name="Slot28" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_left = 240.0
margin_top = 328.0
margin_right = 312.0
margin_bottom = 400.0

[node name="Slot29" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_left = 320.0
margin_top = 328.0
margin_right = 392.0
margin_bottom = 400.0

[node name="Slot30" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_left = 400.0
margin_top = 328.0
margin_right = 472.0
margin_bottom = 400.0

[node name="Slot31" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_top = 410.0
margin_bottom = 482.0

[node name="Slot32" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_left = 80.0
margin_top = 410.0
margin_right = 152.0
margin_bottom = 482.0

[node name="Slot33" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_left = 160.0
margin_top = 410.0
margin_right = 232.0
margin_bottom = 482.0

[node name="Slot34" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_left = 240.0
margin_top = 410.0
margin_right = 312.0
margin_bottom = 482.0

[node name="Slot35" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_left = 320.0
margin_top = 410.0
margin_right = 392.0
margin_bottom = 482.0

[node name="Slot36" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/ColorRect/InventoryContainer" instance=ExtResource( 1 )]
margin_left = 400.0
margin_top = 410.0
margin_right = 472.0
margin_bottom = 482.0

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 492.0
margin_right = 981.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_right = 489.0
margin_bottom = 248.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0901961, 0.0862745, 0.0862745, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ColorRect/VBoxContainer"]
margin_right = 469.0
margin_bottom = 100.0
size_flags_vertical = 3
text = "Crafting"
align = 1
valign = 1

[node name="GridContainer" type="GridContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ColorRect/VBoxContainer"]
margin_top = 104.0
margin_right = 469.0
margin_bottom = 204.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 0
custom_constants/hseparation = 23
columns = 5

[node name="Craft1" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ColorRect/VBoxContainer/GridContainer" instance=ExtResource( 1 )]

[node name="Craft2" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ColorRect/VBoxContainer/GridContainer" instance=ExtResource( 1 )]
margin_left = 95.0
margin_right = 167.0

[node name="Craft3" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ColorRect/VBoxContainer/GridContainer" instance=ExtResource( 1 )]
margin_left = 190.0
margin_right = 262.0

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ColorRect/VBoxContainer/GridContainer"]
margin_left = 285.0
margin_right = 357.0
margin_bottom = 72.0
texture = ExtResource( 5 )

[node name="Craft4" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ColorRect/VBoxContainer/GridContainer" instance=ExtResource( 1 )]
margin_left = 380.0
margin_right = 452.0

[node name="CreateButton" type="Button" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ColorRect/VBoxContainer"]
margin_left = 416.0
margin_top = 208.0
margin_right = 469.0
margin_bottom = 228.0
size_flags_horizontal = 8
disabled = true
text = "Create"

[node name="ColorRect2" type="ColorRect" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 252.0
margin_right = 489.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0901961, 0.0862745, 0.0862745, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ColorRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ColorRect2/VBoxContainer"]
margin_right = 469.0
margin_bottom = 14.0
text = "Recipes"
align = 1

[node name="VScrollBar" type="ScrollContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ColorRect2/VBoxContainer"]
margin_top = 18.0
margin_right = 469.0
margin_bottom = 121.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ColorRect2/VBoxContainer/VScrollBar"]
margin_right = 457.0
margin_bottom = 116.0
size_flags_horizontal = 3

[node name="Minor Healing Potion" type="Button" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ColorRect2/VBoxContainer/VScrollBar/VBoxContainer"]
margin_right = 457.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Minor Healing Potion"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Major Healing Potion2" type="Button" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ColorRect2/VBoxContainer/VScrollBar/VBoxContainer"]
margin_top = 24.0
margin_right = 457.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "Major Healing Potion"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Extreme Healing Potion3" type="Button" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ColorRect2/VBoxContainer/VScrollBar/VBoxContainer"]
margin_top = 48.0
margin_right = 457.0
margin_bottom = 68.0
size_flags_horizontal = 3
text = "Extreme Healing Potion"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Minor Speed Potion4" type="Button" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ColorRect2/VBoxContainer/VScrollBar/VBoxContainer"]
margin_top = 72.0
margin_right = 457.0
margin_bottom = 92.0
size_flags_horizontal = 3
text = "Minor Speed Potion"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Major Speed Potion5" type="Button" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ColorRect2/VBoxContainer/VScrollBar/VBoxContainer"]
margin_top = 96.0
margin_right = 457.0
margin_bottom = 116.0
size_flags_horizontal = 3
text = "Major Speed Potion"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer2" type="GridContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ColorRect2/VBoxContainer"]
margin_top = 125.0
margin_right = 469.0
margin_bottom = 228.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 0
custom_constants/hseparation = 23
columns = 5

[node name="Recipe1" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ColorRect2/VBoxContainer/GridContainer2" instance=ExtResource( 1 )]

[node name="Icon" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ColorRect2/VBoxContainer/GridContainer2/Recipe1" index="0"]
margin_left = 2.8811
margin_right = -7.1189

[node name="Recipe2" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ColorRect2/VBoxContainer/GridContainer2" instance=ExtResource( 1 )]
margin_left = 95.0
margin_right = 167.0

[node name="Recipe3" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ColorRect2/VBoxContainer/GridContainer2" instance=ExtResource( 1 )]
margin_left = 190.0
margin_right = 262.0

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ColorRect2/VBoxContainer/GridContainer2"]
margin_left = 285.0
margin_right = 357.0
margin_bottom = 72.0
texture = ExtResource( 5 )

[node name="Recipe4" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ColorRect2/VBoxContainer/GridContainer2" instance=ExtResource( 1 )]
margin_left = 380.0
margin_right = 452.0

[node name="DoneButton" type="Button" parent="NinePatchRect"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -56.0
margin_top = 5.0
margin_right = -9.99997
margin_bottom = 25.0
rect_rotation = -0.14901
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 256.738, 180.798 )
zoom = Vector2( 0.5, 0.6 )
[connection signal="closing" from="." to="." method="_on_Inventory_closing"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ColorRect/VBoxContainer/CreateButton" to="." method="_on_CreateButton_pressed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ColorRect2/VBoxContainer/VScrollBar/VBoxContainer/Minor Healing Potion" to="." method="_on_Minor_Healing_Potion_pressed"]
[connection signal="pressed" from="NinePatchRect/DoneButton" to="." method="_on_DoneButton_pressed"]

[editable path="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ColorRect2/VBoxContainer/GridContainer2/Recipe1"]
